--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Colorful Music Player</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="STYLE.CSS">
 </head>
 <body>
 
@@ -23,4 +23,5 @@
   </div>
 
 </body>
+
 </html>
